# DefenceOfTheNexus

./: .gitignore  228.gsv  CMakeLists.txt  tests.cpp
resources/: data.qrc  images.qrc  interface.qrc  lang.qrc  other.qrc  sprites.qrc
resources/data/: graphics_descriptions.json  graphicsdescriptions.json  objects.json
resources/lang/: by.json  en.json  ru.json
src/bootstrap/: bootstrap.cpp
src/client/: app.cpp  app.h  graphicsobject.cpp  graphicsobject.h  mainwindow.cpp  mainwindow.h  mapinput.cpp  mapinput.h  multiplayerinterface.cpp  multiplayerinterface.h  multipleerinterface.cpp  multipleerinterface.h  objectgraphicsdescription.cpp  objectgraphicsdescription.h  properties.cpp  properties.h  screen.cpp  screen.h  sprite.cpp  sprite.h  spritecontroller.cpp  spritecontroller.h  spritedescription.cpp  spritedescription.h  widget.cpp  widget.h  windowmanager.cpp  windowmanager.h
src/client/network/: multiplayerinterface.cpp  multiplayerinterface.h
src/client/screens/: connectionscreen.cpp  connectionscreen.h  gamecreationscreen.cpp  gamecreationscreen.h  gamescreen.cpp  gamescreen.h  lossscreen.cpp  lossscreen.h  menuscreen.cpp  menuscreen.h  messagescreen.cpp  messagescreen.h  networkscreen.cpp  networkscreen.h  optionsscreen.cpp  optionsscreen.h  pausescreen.cpp  pausescreen.h  selectionscreen.cpp  selectionscreen.h  settingsscreen.cpp  settingsscreen.h  victoryscreen.cpp  victoryscreen.h
src/client/spritecontrollers/: defaultspritecontroller.cpp  defaultspritecontroller.h  resourcespritecontroller.cpp  resourcespritecontroller.h  uni1spritecontroller.cpp  uni1spritecontroller.h  unispritecontroller.cpp  unispritecontroller.h  unitspritecontroller.cpp  unitspritecontroller.h
src/client/widgets/: buildslot.cpp  buildslot.h  chooser.cpp  chooser.h  gameinterface.cpp  gameinterface.h  gamemap.cpp  gamemap.h  healthbar.cpp  healthbar.h  imagebutton.cpp  imagebutton.h  minimap.cpp  minimap.h  playerslot.cpp  playerslot.h  textedit.cpp  textedit.h  textview.cpp  textview.h  uniticon.cpp  uniticon.h
src/core/: attribute.h  building.cpp  building.h  command.cpp  command.h  damageable.cpp  damageable.h  damaging.cpp  damaging.h  event.cpp  event.h  gameworld.cpp  gameworld.h  moving.cpp  moving.h  object.cpp  object.h  objectsignature.cpp  objectsignature.h  resource.cpp  resource.h  resourcebundle.cpp  resourcebundle.h  serializer.cpp  serializer.h  unit.cpp  unit.h
src/core/attributes/: builder.cpp  builder.h  bullet.cpp  bullet.h  cost.cpp  cost.h  damageable.cpp  damageable.h  damaging.cpp  damaging.h  mining.cpp  mining.h  moving.cpp  moving.h  resource.cpp  resource.h  wall.cpp  wall.h
src/server/: aiplayer.cpp  aiplayer.h  bootstrap.cpp  commandexecutor.cpp  commandexecutor.h  controller.cpp  controller.h  engine.cpp  engine.h  gameconfiguration.cpp  gameconfiguration.h  gameworldcontroller.cpp  gameworldcontroller.h  movingperformer.h  objectsignature.cpp  objectsignature.h  server.cpp  server.h  test.cpp  unitcontroller.cpp  unitcontroller.h  worldgenerator.cpp  worldgenerator.h
src/server/ai/: simpleai.cpp  simpleai.h
src/server/controllers/: controller.cpp  controller.h  databundle.h  gameworldcontroller.cpp  gameworldcontroller.h  unitcontroller.cpp  unitcontroller.h
src/server/network/: connectedplayer.cpp  connectedplayer.h  server.cpp  server.h
src/server/performers/: damageableperformer.cpp  damageableperformer.h  damageperformer.cpp  damagingperformer.cpp  damagingperformer.h  miningperformer.cpp  miningperformer.h  movingperformer.cpp  movingperformer.h
src/server/strategies/: attackstrategy.cpp  attackstrategy.h  bulletstrategy.cpp  bulletstrategy.h  minestrategy.cpp  minestrategy.h  movestrategy.cpp  movestrategy.h  pathstrategy.cpp  pathstrategy.h  shortestpathstrategy.cpp  shortestpathstrategy.h  strategy.cpp  strategy.h  towerstrategy.cpp  towerstrategy.h
src/utils/: colors.h  factory.cpp  factory.h  keymanager.cpp  keymanager.h  lang.cpp  lang.h  network.cpp  network.h  queue.h  serializer.cpp  serializer.h  smartserializer.cpp  smartserializer.h  utils.cpp  utils.h
